--- a/client/app/views/admin/content/tab1.html
+++ b/client/app/views/admin/content/tab1.html
@@ -58,6 +58,16 @@
         </div>
       </div>
     </div>
+    <div>
+      <!-- No está definida la traducción -->
+      <label data-translate>Texto ayuda clave</label>
+      <div>
+        <textarea class="form-control" data-ng-model="resources.node.receipt_key_desc"></textarea>
+      </div>
+    </div>
+  </div>
+
+
 
     <div class="form-group">
       <button class="btn btn-primary"
