--- a/client/app/views/partials/footer.html
+++ b/client/app/views/partials/footer.html
@@ -1,2 +1,31 @@
-<div id="CustomFooter" class="vcenter preformatted mb-1" data-ng-if="public.node.footer" data-markdown-to-html="public.node.footer | stripHtml"></div>
-<div id="AttributionClause" class="vcenter">Powered by <a href="https://www.globaleaks.org/" title="GlobaLeaks - Secure Whistleblowing Software" rel="noreferrer" target="_blank">GlobaLeaks</a></div>
+<!--<div class="row">
+    <div class="col-md-4 text-center"><a rel="noreferrer noopener"
+                                         href="https://ajuntament.barcelona.cat/bustiaetica/ca/normes-reguladores">Normes
+            reguladores</a></div>
+    <div class="col-md-4 text-center">
+        <div id="CustomFooter" class="vcenter preformatted mb-1" data-ng-if="public.node.footer"
+             data-markdown-to-html="public.node.footer | stripHtml"></div>
+    </div>
+    <div class="col-md-4 text-center"><span>Powered by <a rel="noreferrer noopener" href="https://www.globaleaks.org/">GlobaLeaks</a>.</span><span>Projecte creat amb la col·laboració de <a
+                    href="https://xnet-x.net/ca/"><img src="/s/logo_audidat.png" alt="Xnet"></a></span></div>
+
+</div>-->
+
+
+<div class="row">
+
+    <div class="col-md-6 text-center">
+        <div id="CustomFooter" class="vcenter preformatted mb-1" data-ng-if="public.node.footer"
+             data-markdown-to-html="public.node.footer | stripHtml"></div></div>
+    <div class="col-md-6">
+        <div>
+            <span title="Audidat 3.0">Desarrollado por <a
+                        href="https://www.audidat.com"><img src="/data/logo_audidat_pie.png" height="35px" alt="Audidat 3.0"></a>&nbsp;&#8212;&nbsp;</span>
+
+            <span>Powered by <a rel="noreferrer noopener" href="https://www.globaleaks.org/">GlobaLeaks</a>.</span>
+
+        </div>
+
+    </div>
+
+</div>
