--- a/client/app/views/partials/header.html
+++ b/client/app/views/partials/header.html
@@ -1,13 +1,21 @@
 <header id="HeaderBox">
-  <div class="row">
-    <div id="HeaderBox1" class="col-auto mr-auto">
-     <div id="LogoBox" data-ng-click="setHomepage()">
-       <img class="img-fluid'" alt="project logo" data-ng-src="{{public.node.logo ? 's/logo' : 'data/logo.png'}}" />
-     </div>
-     <div id="TitleBox" data-ng-if="projectTitle || pageTitle"><h1><span id="ProjectTitle" data-ng-click="setHomepage()">{{projectTitle}}</span><span class="TitleSeparator" data-ng-if="projectTitle && pageTitle"> - </span><span id="PageTitle">{{pageTitle | translate}}</span></h1></div>
+    <div class="row">
+        <div id="HeaderBox1" class="col-auto mr-auto">
+            <div id="LogoBox" data-ng-click="setHomepage()">
+                <img class="img-fluid'" alt="project logo"
+                     data-ng-src="{{public.node.logo ? 's/logo' : 'data/logo.png'}}"/>
+            </div>
+            <!--<div id="TitleBox" data-ng-if="projectTitle || pageTitle"><h1><span id="ProjectTitle" data-ng-click="setHomepage()">{{projectTitle}}</span><span class="TitleSeparator" data-ng-if="projectTitle && pageTitle"> - </span><span id="PageTitle">{{pageTitle | translate}}</span></h1></div>-->
+
+        </div>
+        <div id="HeaderBox2" class="col-auto">
+            <span id="UserBox" data-ng-include="'views/partials/user.html'"></span>
+        </div>
     </div>
-    <div id="HeaderBox2" class="col-auto">
-      <span id="UserBox" data-ng-include="'views/partials/user.html'"></span>
+    <div data-ng-if="projectTitle || pageTitle" class="row">
+        <div class="col-md-12">
+            <div class="homepage-text1">{{projectTitle}}</div>
+            <div class="homepage-text2">{{pageTitle | translate}}</div>
+        </div>
     </div>
-  </div>
 </header>
