--- a/client/app/views/partials/receipt.html
+++ b/client/app/views/partials/receipt.html
@@ -1,3 +1,4 @@
+<label id="MonitoringTitle" data-translate>Monitoring</label>
 <label id="WhistleblowerLoginQuestion" for="receipt-input" data-translate>Have you already filed a report? Enter your receipt.</label>
 <form id="WhistleblowerLoginForm" class="form-inline" autocomplete="off" novalidate>
   <div class="form-group d-block mx-auto">
