--- a/client/app/views/whistleblower/receipt.html
+++ b/client/app/views/whistleblower/receipt.html
@@ -21,12 +21,26 @@
         <span data-translate>Remember your receipt for this report.</span>
       </div>
       <div class="card-body">
-        <div id="Receipt"><div class="btn btn-light" data-uib-tooltip="{{'Copy to clipboard' | translate}}" data-ng-click="Utils.copyToClipboard(Authentication.session.receipt)">{{formatted_receipt}}</div></div>
+        <div id="Receipt">
+          <div class="btn btn-light" data-uib-tooltip="{{'Copy to clipboard' | translate}}"
+            data-ng-click="Utils.copyToClipboard(Authentication.session.receipt)">{{formatted_receipt}}</div>
+        </div>
         <!--<div data-translate>Use the 16 digit receipt to log in. It will allow you to view any messages we sent you, and also to add extra info.</div>-->
-        <div id="Receipt_key_desc" data-ng-show="public.node.receipt_key_desc" data-markdown-to-html="public.node.receipt_key_desc | stripHtml"></div>
+        
+        <div>
+          <p>Hay que conservar este código de dieciséis dígitos para:</p>
+          <ul>
+            <li><span data-translate>Acceder a la comunicación.</span></li>
+            <li><span data-translate>Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.</span></li>
+            <li><span data-translate>Añadir ficheros o información adicional.</span></li>
+            <li><span data-translate>Conocer el estado de tramitación de la comunicación.</span></li>
+          </ul>
+          <p><span data-translate>El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.</span></p>
+        </div>
 
         <div class="mt-md-3 clearfix" data-ng-if="page === 'receiptpage'">
-          <button id="ReceiptButton" class="float-right btn btn-primary" data-ng-click="Authentication.login(0, 'whistleblower', Authentication.session.receipt)" data-translate>View your report</button>
+          <button id="ReceiptButton" class="float-right btn btn-primary"
+            data-ng-click="Authentication.login(0, 'whistleblower', Authentication.session.receipt)" data-translate>View your report</button>
         </div>
       </div>
     </div>
