--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -1367,9 +1367,18 @@ Audidat
   margin-bottom: -0.5rem;
 }
 
+#step-1 > div > div > p:nth-child(1) > strong:nth-child(2){
+  background-color: #ffc107;
+  border-radius: .25rem;
+  padding: 0.4rem;
+  font-size: 0.9rem;
+}
+
 #step-1 > div > div > p:nth-child(2) {
   font-size: 0.9rem;
 }
+
+
 
 /* cuestionario 3 condiciones */
 #step-2 p {
