--- a/client/app/views/whistleblower/receipt.html
+++ b/client/app/views/whistleblower/receipt.html
@@ -26,9 +26,9 @@
             data-ng-click="Utils.copyToClipboard(Authentication.session.receipt)">{{formatted_receipt}}</div>
         </div>
         <!--<div data-translate>Use the 16 digit receipt to log in. It will allow you to view any messages we sent you, and also to add extra info.</div>-->
-        
+
         <div>
-          <p>Hay que conservar este código de dieciséis dígitos para:</p>
+          <p><span data-translate>Hay que conservar este código de dieciséis dígitos para:</span></p>
           <ul>
             <li><span data-translate>Acceder a la comunicación.</span></li>
             <li><span data-translate>Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.</span></li>
