--- a/client/app/views/whistleblower/receipt.html
+++ b/client/app/views/whistleblower/receipt.html
@@ -1,48 +1,53 @@
 <div class="row" data-ng-if="page === 'receiptpage'">
-  <div class="col-md-12">
-    <div id="ReceiptText">
-      <div>
-        <span data-translate>Thank you.</span>
-      </div>
-      <div>
-        <span data-translate>Your report was successful.</span> <span data-translate>We will try to get back to you as soon as possible.</span>
-      </div>
+    <div class="col-md-12">
+        <div id="ReceiptText">
+            <span data-translate>Thank you.</span> <span data-translate>Your report was successful.</span> <span
+                data-translate>We will try to get back to you as soon as possible.</span>
+        </div>
     </div>
-    <div>
-      <!-- TODO delete -->
-      <!--<span data-translate>Message created by paco</span>-->
-    </div>
-  </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
-    <div class="card card-secondary">
-      <div class="card-header">
-        <span data-translate>Remember your receipt for this report.</span>
-      </div>
-      <div class="card-body">
-        <div id="Receipt">
-          <div class="btn btn-light" data-uib-tooltip="{{'Copy to clipboard' | translate}}"
-            data-ng-click="Utils.copyToClipboard(Authentication.session.receipt)">{{formatted_receipt}}</div>
-        </div>
-        <!--<div data-translate>Use the 16 digit receipt to log in. It will allow you to view any messages we sent you, and also to add extra info.</div>-->
+    <div class="col-md-12">
+        <div class="card card-secondary">
+            <label for="ReceiptCode" class="card-header" data-translate>Remember your receipt for this report.</label>
+            <div class="card-body">
+                <div class="form-inline" data-uib-tooltip="{{'Copy to clipboard' | translate}}"
+                     data-ng-click="Utils.copyToClipboard(receipt)">
+                    <div class="form-group d-block mx-auto">
+                        <div class="input-group">
+                            <input id="ReceiptCode" class="form-control" type="text" maxlength="19" size="19"
+                                   data-ng-model="formatted_receipt" name="receipt-input" disabled>
+                            <span class="input-group-append">
+                <button id="ReceiptButton" data-ng-click="Utils.copyToClipboard(receipt)" class="btn btn-primary"
+                        type="button" data-ng-attr-aria-label="{{'Copy to clipboard' | translate}}">
+                  <i class="fa-solid fa-copy"></i>
+                </button>
+              </span>
+                        </div>
+                        <!--<div data-translate>Use the 16 digit receipt to log in. It will allow you to view any messages we sent you, and also to add extra info.</div>-->
 
-        <div>
-          <p><span data-translate>Hay que conservar este código de dieciséis dígitos para:</span></p>
-          <ul>
-            <li><span data-translate>Acceder a la comunicación.</span></li>
-            <li><span data-translate>Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.</span></li>
-            <li><span data-translate>Añadir ficheros o información adicional.</span></li>
-            <li><span data-translate>Conocer el estado de tramitación de la comunicación.</span></li>
-          </ul>
-          <p><span data-translate>El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.</span></p>
-        </div>
+                        <div>
+                            <p><span data-translate>Hay que conservar este código de dieciséis dígitos para:</span></p>
+                            <ul>
+                                <li><span data-translate>Acceder a la comunicación.</span></li>
+                                <li><span data-translate>Comunicarse con el órgano gestor del buzón y consultar los mensajes recibidos.</span>
+                                </li>
+                                <li><span data-translate>Añadir ficheros o información adicional.</span></li>
+                                <li><span data-translate>Conocer el estado de tramitación de la comunicación.</span>
+                                </li>
+                            </ul>
+                            <p><span data-translate>El órgano gestor del buzón utilizará, de manera prioritaria, este canal seguro, y garantizará el anonimato y la confidencialidad de las comunicaciones.</span>
+                            </p>
+                        </div>
 
-        <div class="mt-md-3 clearfix" data-ng-if="page === 'receiptpage'">
-          <button id="ReceiptButton" class="float-right btn btn-primary"
-            data-ng-click="Authentication.login(0, 'whistleblower', Authentication.session.receipt)" data-translate>View your report</button>
+                        <div class="mt-md-3 clearfix" data-ng-if="page === 'receiptpage'">
+                            <button id="ReceiptButton" class="float-right btn btn-primary"
+                                    data-ng-click="setPage('tippage')" data-translate>View your report
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
